Fix too long number

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -11,7 +11,7 @@
     --material-shadow-4: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     --material-shadow-5: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 
-    --positive-change: rgb(90, 238, 90);
+    --positive-change: rgb(98, 199, 98);
     --negative-change: rgb(236, 82, 82);
     --neutral-change: white;
 }
